working on CMS Studio

--- a/src/index.css
+++ b/src/index.css
@@ -396,6 +396,15 @@
   background: transparent;
   color: hsl(var(--foreground));
 }
+.shiki-wrapper .shiki {
+  margin: 0;
+  background: transparent !important;
+}
+.shiki-wrapper .shiki code {
+  display: block;
+  font-size: 13px;
+  line-height: 1.6;
+}
 
 /* BlockNote code blocks (Notion-like) */
 .notion-editor .bn-block-content[data-content-type="codeBlock"] {
